# streamlit-vcd

./: README.md  main.py  pyproject.toml  railway.toml  spec.md  utils.py
pages/: 01_color_palette.py  02_font_preview.py  03_filter.py  04_data.py  05_portfolio.py
